--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -209,7 +209,7 @@
                                 android:ems="10"
                                 android:focusable="false"
                                 android:freezesText="true"
-                                android:hint="@string/identification_screen_prompt_birthday"
+                                android:hint="@string/hint_age"
                                 android:imeOptions="actionUnspecified"
                                 android:inputType=""
                                 android:maxLines="1"
@@ -217,6 +217,83 @@
                                 android:textAppearance="@style/sign_up_input" />
                         </com.google.android.material.textfield.TextInputLayout>
 
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/et_tested_positive_date"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:drawablePadding="10dp"
+                                android:ems="10"
+                                android:focusable="false"
+                                android:fontFamily="@font/lato_regular"
+                                android:freezesText="true"
+                                android:hint="@string/hint_date_tested_positive"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType=""
+                                android:maxLines="1"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <TextView
+                            android:layout_marginTop="8dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:includeFontPadding="false"
+                                android:textSize="16sp"
+                                android:text="@string/identification_screen_prompt_state"
+                                android:textAppearance="@style/sign_up_input" />
+                            <Spinner
+                                android:id="@+id/state_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:focusable="true"
+                                android:entries="@array/state_values"
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:layout_marginTop="15dp"
+                                android:includeFontPadding="false"
+                                android:textSize="16sp"
+                                android:text="@string/identification_screen_prompt_city"
+                                android:textAppearance="@style/sign_up_input" />
+                            <Spinner
+                                android:id="@+id/city_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:focusable="true"
+                                android:entries="@array/jh_city_values"
+                                />
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/identification_postal_code"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:freezesText="true"
+                                android:hint="@string/hint_postal_code"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType="number"
+                                android:maxLength="6"
+                                android:maxLines="1"
+                                android:tag="@string/tag_optional"
+                                android:textAppearance="@style/sign_up_input"/>
+
+
+                        </com.google.android.material.textfield.TextInputLayout>
                         <!--    <android.support.design.widget.TextInputLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
@@ -239,6 +316,8 @@
                                     android:singleLine="true" />
 
                             </android.support.design.widget.TextInputLayout>-->
+
+
 
                         <FrameLayout
                             android:layout_width="match_parent"
@@ -887,27 +966,26 @@
 
                 </android.support.design.widget.TextInputLayout>-->
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
 
-                    <EditText
-                        android:id="@+id/identification_postal_code"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:freezesText="true"
-                        android:hint="@string/identification_screen_prompt_postal_code"
-                        android:imeOptions="actionUnspecified"
-                        android:inputType="number"
-                        android:maxLength="6"
-                        android:maxLines="1"
-                        android:tag="@string/tag_optional"
-                        android:textAppearance="@style/sign_up_input"/>
+<!--                    <EditText-->
+<!--                        android:id="@+id/identification_postal_code"-->
+<!--                        android:layout_width="fill_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:ems="10"-->
+<!--                        android:freezesText="true"-->
+<!--                        android:hint="@string/identification_screen_prompt_postal_code"-->
+<!--                        android:imeOptions="actionUnspecified"-->
+<!--                        android:inputType="number"-->
+<!--                        android:maxLength="6"-->
+<!--                        android:maxLines="1"-->
+<!--                        android:tag="@string/tag_optional"-->
+<!--                        android:textAppearance="@style/sign_up_input"/>-->
 
 
-                </com.google.android.material.textfield.TextInputLayout>
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
 
             </LinearLayout>
             </LinearLayout>
