--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -369,7 +369,7 @@
                                         android:freezesText="true"
                                         android:hint="@string/identification_screen_prompt_phone_number"
                                         android:imeOptions="actionUnspecified"
-                                        android:inputType="phone"
+                                        android:inputType="number"
                                         android:maxLength="10"
                                         android:maxLines="1"
                                         android:singleLine="true"
