--- a/app/src/main/res/layout/activity_choose_language.xml
+++ b/app/src/main/res/layout/activity_choose_language.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/save_button"
         android:layout_gravity="bottom|center"
-        android:text="@string/save_button"
+        android:text="@string/save"
         android:fontFamily="@font/lato_regular"
         android:textStyle="bold"
         android:textColor="@color/white"
