--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -519,6 +519,8 @@ Github: prajwalmw
                     android:id="@+id/physcial_examination_download"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingStart="20dp"
+                    android:paddingBottom="12dp"
                     android:layout_below="@id/recy_physexam"
                     android:backgroundTint="@color/cardview_dark_background"
                     android:text="@string/click_to_download_the_images"
