--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -700,6 +700,147 @@
                 </androidx.cardview.widget.CardView>
 
 
+                <LinearLayout
+                    android:id="@+id/cardview_prfile_about"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cardview_help"
+                    android:layout_marginTop="8dip"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dip"
+                        android:weightSum="2">
+
+                        <TextView
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/lato_regular"
+                            android:src="@drawable/ic_doctor_with_mask"
+                            android:text="Profile"
+                            android:textAlignment="center"
+                            android:textColor="@color/gray_6"
+                            android:textSize="13sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="24dip"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/lato_regular"
+                            android:text="About Us"
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="@color/gray_6"
+                            android:textSize="13sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dip"
+                            android:layout_marginTop="8dip"
+                            android:layout_marginBottom="16dip"
+                            android:layout_weight="1"
+                            app:cardBackgroundColor="@color/blue_light_1"
+                            app:cardCornerRadius="8dip"
+                            app:cardElevation="8dip"
+                            app:cardPreventCornerOverlap="false">
+
+                            <LinearLayout
+                                android:id="@+id/button_profile"
+                                android:onClick="openProfile"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:scaleType="centerCrop"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="112dip"
+                                    android:src="@drawable/ic_profile" />
+
+
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/btn_about"
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="24dip"
+                            android:layout_marginTop="8dip"
+                            android:layout_marginEnd="20dip"
+                            android:layout_marginBottom="16dip"
+                            android:layout_weight="1"
+                            app:cardBackgroundColor="@color/white"
+                            app:cardCornerRadius="8dip"
+                            app:cardElevation="8dip"
+                            android:onClick="openIntro"
+                            app:cardPreventCornerOverlap="false">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:visibility="visible">
+
+                                <ImageView
+                                    android:scaleType="centerCrop"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="112dp"
+                                    android:src="@drawable/ic_about" />
+
+
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cardview_button_about"
+                            android:layout_width="0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="5dip"
+                            android:layout_marginVertical="10dip"
+                            android:layout_weight="1"
+                            android:visibility="gone"
+                            app:cardCornerRadius="10dip"
+                            app:cardElevation="8dip"
+                            app:cardPreventCornerOverlap="true">
+
+                            <RelativeLayout
+                                android:id="@+id/button_about"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="bottom">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerHorizontal="true"
+                                    android:src="@drawable/ic_doctor_faq" />
+
+                            </RelativeLayout>
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+                </LinearLayout>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/mental_cardview_help"
                     android:layout_width="match_parent"
