--- a/app/src/main/res/layout/intro_slide2.xml
+++ b/app/src/main/res/layout/intro_slide2.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
